2011-08-16  Ken Brown  <kbrown@cornell.edu>

	* gmalloc.c: Expand comment.

2011-08-16  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (set_cursor_from_row): Don't accept a previous candidate
	if it fails the cursor_row_p test.  Fixes cursor positioning at ZV.

2011-08-16  Ken Brown  <kbrown@cornell.edu>

	Fix memory allocation problems in Cygwin build (Bug#9273).

	* unexcw.c ( __malloc_initialized): Declare external variable.
	(fixup_executable): Force the dumped emacs to reinitialize malloc.

	* gmalloc.c [CYGWIN] (bss_sbrk_heapbase, bss_sbrk_heapinfo): New
	variables.
	(malloc_initialize_1) [CYGWIN]: Prepare for reinitializing the
	dumped emacs.
	(_free_internal_nolock) [CYGWIN]: Ignore requests to free storage
	in the static heap.
	[CYGWIN] (special_realloc): New function.
	(_realloc_internal_nolock) [CYGWIN]: Use the new function on
	requests to realloc storage in the static heap.

2011-08-15  Paul Eggert  <eggert@cs.ucla.edu>

	* bidi.c (bidi_initialize): Remove unused local.

2011-08-15  Eli Zaretskii  <eliz@gnu.org>

	* biditype.h: File removed.

	* bidimirror.h: File removed.

	* deps.mk (bidi.o): Remove biditype.h and
	bidimirror.h.

	* makefile.w32-in ($(BLD)/bidi.$(O)): Remove biditype.h and
	bidimirror.h.

	* dispextern.h: Fix a typo in the comment to bidi_type_t.

	* chartab.c: Improve commentary for the uniprop_table API.

	* bidi.c (bidi_paragraph_init): Support zero value of
	bidi_ignore_explicit_marks_for_paragraph_level.
	(bidi_initialize): Use uniprop_table instead of including
	biditype.h and bidimirror.h.

	* xdisp.c (move_it_in_display_line_to): Don't reset pixel
	coordinates of the iterator when restoring from ppos_it.
	(Bug#9296)

2011-08-14  Kenichi Handa  <handa@m17n.org>

	* process.c (create_process): Call setup_process_coding_systems
	after the pid of the process is set to -1.

2011-08-14  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (move_it_in_display_line_to): Don't invoke
	IT_RESET_X_ASCENT_DESCENT when iterator position was restored from